<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_all"
    tools:context=".login.Login">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp">

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif-black"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="230dp"
            android:layout_height="167dp"
            android:layout_below="@id/tv_login"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:scaleType="fitXY"
            android:src="@drawable/logo" />

        <EditText
            android:id="@+id/et_login_email"
            android:hint="@string/email"
            android:drawableStart="@drawable/ic_email"
            android:drawableTint="@color/white"
            android:background="@drawable/custom_et"
            android:layout_marginTop="50dp"
            android:drawablePadding="10dp"
            android:paddingStart="20dp"
            android:autofillHints="emailAddress"
            android:inputType="textEmailAddress"
            android:layout_marginStart="5dp"
            android:textColor="@color/white"
            android:layout_below="@id/img_logo"
            android:textColorHint="@color/white"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/et_login_password"
            android:hint="@string/password"
            android:drawableStart="@drawable/ic_lock"
            android:drawableTint="@color/white"
            android:background="@drawable/custom_et"
            android:layout_marginTop="10dp"
            android:drawablePadding="10dp"
            android:paddingStart="20dp"
            android:autofillHints="password"
            android:inputType="textPassword"
            android:layout_marginStart="5dp"
            android:textColor="@color/white"
            android:layout_below="@id/et_login_email"
            android:textColorHint="@color/white"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            tools:ignore="RtlSymmetry" />

        <ImageButton
            android:id="@+id/btn_login"
            android:layout_width="136dp"
            android:layout_height="46dp"
            android:layout_below="@id/et_login_password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:background="@drawable/login"
            android:scaleType="fitXY" />

        <TextView
            android:id="@+id/register"
            android:text="@string/belum_punya_akun_register"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:fontFamily="sans-serif-black"
            android:layout_below="@id/btn_login"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

</RelativeLayout>